resize: Update thumb style to avoid layout shifts
Partly fixes https://github.com/christiankaindl/trello-super-powers/issues/35

--- a/inject/enhancedStyles.css
+++ b/inject/enhancedStyles.css
@@ -64,7 +64,7 @@
   height: 100%;
   width: 8px;
   cursor: col-resize;
-  margin: 0px;
+  margin: 0px -4px;
   border-radius: 99px;
 
   /* borrowed from Trellos .list-wrapper*/
